[package]
name = "valence"
version = "0.1.0"
authors = ["Logan Collins <logan.neal.collins@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0.1"
futures = "0.1.25"
tokio = "0.1.11"
bytes = "0.4.10"
rand = "0.5.5"
uuid = { version = "0.7", features = ["v4"] }
# tokio-codec = "0.1.1"
# tokio-serde-bincode = "0.1.1"